--- a/index.html
+++ b/index.html
@@ -28,33 +28,21 @@
     <div class="hamburger"><i class="fas fa-bars"></i></div>
   </header>
 
-  <section class="hero" id="home">
-    <div class="hero-content">
-      <h1>Generate curriculum-ready lesson plans in seconds</h1>
-      <p>TeachWave AI crafts lessons tailored for Teachers, Students, and Parents — multilingual, printable, and sharable.</p>
-      <div class="hero-ctas">
-        <button id="scrollToForm" class="cta primary">Create Lesson Plan</button>
-        <button id="installBtn" class="cta">Install App</button>
-      </div>
+<section class="hero" id="home">
+  <div class="hero-content">
+    <h1>Generate curriculum-ready lesson plans in seconds</h1>
+    <p>TeachWave AI crafts lessons tailored for Teachers, Students, and Parents — multilingual, printable, and sharable.</p>
+    <div class="hero-ctas">
+      <button id="scrollToForm" class="cta primary">Create Lesson Plan</button>
+      <button id="installBtn" class="cta">Install App</button>
     </div>
-    <div class="hero-image">
-      <!-- decorative SVG / placeholder -->
-      <svg width="420" height="280" viewBox="0 0 420 280" preserveAspectRatio="xMidYMid slice" aria-hidden="true">
-        <defs>
-          <linearGradient id="g1" x1="0" x2="1">
-            <stop offset="0" stop-color="#6c00ff" stop-opacity="0.9"/>
-            <stop offset="1" stop-color="#00d4ff" stop-opacity="0.9"/>
-          </linearGradient>
-        </defs>
-        <rect width="420" height="280" rx="20" fill="url(#g1)"></rect>
-        <g transform="translate(30,30)" fill="#fff" opacity="0.92">
-          <rect x="0" y="0" width="140" height="120" rx="10" fill="#ffffff22"/>
-          <rect x="160" y="0" width="220" height="80" rx="10" fill="#ffffff16"/>
-          <rect x="160" y="100" width="220" height="120" rx="10" fill="#ffffff16"/>
-        </g>
-      </svg>
-    </div>
-  </section>
+  </div>
+
+  <div class="hero-image">
+    <img src="images/hero.png" alt="TeachWave Illustration" class="hero-img" />
+  </div>
+</section>
+
 
   <main>
     <section class="lesson-form" id="formSection">
