--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class="hero-image">
-    <img src="images/hero.png" alt="TeachWave Illustration" class="hero-img" />
+    <img src="images/hero.jng" alt="TeachWave Illustration" class="hero-img" />
   </div>
 </section>
 
