Install Button Hidden + blurred btn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p>TeachWave AI crafts lessons tailored for Teachers, Students, and Parents — multilingual, printable, and sharable.</p>
     <div class="hero-ctas">
       <button id="scrollToForm" class="cta primary">Create Lesson Plan</button>
-      <button id="installBtn" class="cta">Install App</button>
+      <!-- <button id="installBtn" class="cta">Install App</button> -->
     </div>
   </div>
 
