Install Button Hidden + blurred btn

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 
       <div class="output-actions">
         <button id="copyBtn" class="small"><i class="fas fa-copy"></i> Copy</button>
-        <button id="saveBtn" class="small"><i class="fas fa-save"></i> Save</button>
-        <button id="downloadBtn" class="small"><i class="fas fa-download"></i> Download PDF</button>
+        <button id="saveBtn" class="blur-btn"><i class="fas fa-save"></i> Save</button>
+        <button id="downloadBtn" class="small blur-btn"><i class="fas fa-download"></i> Download PDF</button>
         <button id="docxBtn" class="small"><i class="fas fa-file-word"></i> Export .docx</button>
         <button id="simplifyBtn" class="small"><i class="fas fa-magic"></i> Make Simpler</button>
       </div>
